test/errors/compatibility_error/zs/version_less_than_min_supported_error.zs
package version_less_than_min_supported_error;

zserio_compatibility_version("2.3.2"); // minimum supported version is 2.4.0
